--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/lightbox.css">
     <script src="../js/database.class.js"></script>
     <script src="../js/photographer.class.js"></script>
+    <script src="../js/photographerlist.class.js"></script>
     <script src="../js/photographinfos.class.js"></script>
     <script src="../js/mediafactory.class.js"></script>
     <script src="../js/galery.class.js"></script>
@@ -16,6 +17,9 @@
     <script src="../js/lightbox.js"></script>
     <script src="../js/dropdown.list.js"></script>
     <script src="../js/modal.js"></script>
+    <script src="js/tag.class.js"></script>
+    <script src="js/taglist.class.js"></script>
+    <script src="../js/script.js"></script>
     <script src="../js/script_pages.js" ></script>
 </head>
 <body>
@@ -30,10 +34,10 @@
         <div class='filter__section'>
             <div>Trier par</div>
         <div class="dropdown">
-            <a class="dropbtn dropOne" href="javascript:void(0);" id="sortByPopularity" aria-label="tri des médias par popularité"  onclick="galery.sortBy('popularity')">Popularité</a><button onclick="filter()" class="dropbtn triger" aria-haspopup="listbox" aria-expanded="true"><span class="triger__content" onclick="filter()" aria-label="afficher la liste des tris">></span></button>
+            <div class="dropdown__btn"><a class="dropbtn dropOne" href="javascript:void(0);" id="sortByPopularity" aria-label="tri des médias par popularité"  onclick="galery.sortBy('popularity')">Popularité</a><button onclick="filter()" class="dropbtn triger" aria-haspopup="listbox" aria-expanded="true"><span class="triger__content" onclick="filter()" aria-label="afficher la liste des tris">></span></button></div>
             <div id="myDropdown" class="dropdown-content">
-              <a aria-label="tri des médias par date" role="listbox" id="sortByDate" onclick="galery.sortBy('date')"><p class="droptext" id="date">Date</p></a>
-              <a aria-label="tri des médias par titre" id="sortByTitle" onclick="galery.sortBy('title')"><p class="droptext" id="prix">Titre</p></a>
+              <a class="dropTwo" aria-label="tri des médias par date" role="listbox" id="sortByDate" onclick="galery.sortBy('date')"><p class="droptext dropTwo" id="date">Date</p></a>
+              <a class="dropbtn dropThree" aria-label="tri des médias par titre" id="sortByTitle" onclick="galery.sortBy('title')"><p class="droptext dropThree" id="prix">Titre</p></a>
             </div>
           </div>
         </div>
