correct post soutenance

--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -17,9 +17,6 @@
     <script src="../js/lightbox.js"></script>
     <script src="../js/dropdown.list.js"></script>
     <script src="../js/modal.js"></script>
-    <script src="js/tag.class.js"></script>
-    <script src="js/taglist.class.js"></script>
-    <script src="../js/script.js"></script>
     <script src="../js/script_pages.js" ></script>
 </head>
 <body>
@@ -37,7 +34,7 @@
             <div class="dropdown__btn"><a class="dropbtn dropOne" href="javascript:void(0);" id="sortByPopularity" aria-label="tri des médias par popularité"  onclick="galery.sortBy('popularity')">Popularité</a><button onclick="filter()" class="dropbtn triger" aria-haspopup="listbox" aria-expanded="true"><span class="triger__content" onclick="filter()" aria-label="afficher la liste des tris">></span></button></div>
             <div id="myDropdown" class="dropdown-content">
               <a class="dropTwo" aria-label="tri des médias par date" role="listbox" id="sortByDate" onclick="galery.sortBy('date')"><p class="droptext dropTwo" id="date">Date</p></a>
-              <a class="dropbtn dropThree" aria-label="tri des médias par titre" id="sortByTitle" onclick="galery.sortBy('title')"><p class="droptext dropThree" id="prix">Titre</p></a>
+              <a class="dropThree" aria-label="tri des médias par titre" id="sortByTitle" onclick="galery.sortBy('title')"><p class="droptext dropThree" id="prix">Titre</p></a>
             </div>
           </div>
         </div>
