--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="js/taglist.class.js"></script>
 </head>
 
-<body onload="redirect()">
+<body>
     <header>
         <a href="index.html" aria-label="retour page d'accueil" class="logo__container">
             <img class="header__logo" src="images/logo.png" alt="Fisheye Home page">
