--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Fisheye</title>
 
 	<meta charset="utf-8">
-    <meta http-equiv="refresh" content="0;url=https://natachalng.github.io/NatachaLang_6_21122020/index.html" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="stylesheets/style_index.css">
 
@@ -16,7 +15,7 @@
     <script src="js/taglist.class.js"></script>
 </head>
 
-<body>
+<body onload="redirect()">
     <header>
         <a href="index.html" aria-label="retour page d'accueil" class="logo__container">
             <img class="header__logo" src="images/logo.png" alt="Fisheye Home page">
